--- a/main.ipynb
+++ b/main.ipynb
@@ -25,6 +25,18 @@
     "6. 선택된 기사들의 본문 내용 추출\n",
     "7. 추출된 내용을 바탕으로 AI가 한국어로 NYT 스타일의 기사 작성 (Claude 3.5 Sonnet)\n",
     "\n",
+    "## API Usage while development\n",
+    "\n",
+    "Total cost: $0.3464 (461.29 South Korean won)\n",
+    "\n",
+    "Claude 3 Haiku\n",
+    "- Input: $0.0049 (0.019 Million Input Tokens)\n",
+    "- Output: $0.0015 (0.001 Million Output Tokens)\n",
+    "\n",
+    "Claude 3.5 Sonnet\n",
+    "- Input: $0.21 (0.071 Million Input Tokens) \n",
+    "- Output: $0.13 (0.008 Million Output Tokens)\n",
+    "\n",
     "### Reference\n",
     "\n",
     "- https://github.com/mshumer/ai-journalist\n",
